# FRR-Prefix-List-Generator

./: .gitignore  Cargo.toml  README.md  ReadMe.md  config.example.toml  config.ts  package.json
.github/workflows/: ci.yml  release.yml
docs/: systemd.md
src/: adapters.rs  cli.rs  config.rs  diff.rs  error.rs  health.rs  lib.rs  logging.rs  main.old.ts  main.rs  main.ts  ports.rs  service.rs  types.rs  validate.rs
src/lib/: extractASNs.ts  fetchAsSets.ts  generatePrefixLists.ts  logger.ts
